--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "jest"
   },
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "jest": "^27.0.6"
+  }
 }
